Small update to CSS to address issues on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,7 @@ body {
 
 em {
 	padding-left:0.2rem;
+	display:inline;
 }
 
 sup {
@@ -95,6 +96,8 @@ sup {
 .timeline-table {
 	display: flex;
 	justify-content: space-between;
+	user-select: none;
+	-webkit-user-select: none;
 }
 
 .timeline-headings {
